# synful_cuda12x

./: .gitignore  CHANGELOG.md  CRITICAL_GAP_ANALYSIS.md  Dockerfile  GITHUB_ISSUES_TODO.md  IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION_GUIDE.md  Makefile  README.md  README_CUDA12.md  README_MODERN.md  REPOSITORY_PREPARATION.md  benchmark_performance.py  cuda_config.py  performance_optimizations.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_minimal.txt  requirements_modern.txt  setup.py  synful_training_pipeline_visualization.ipynb  test_migration.py  test_tf2_compatibility.py  validate_compatibility.py
.github/ISSUE_TEMPLATE/: bug_report.md  implementation_task.md
.github/workflows/: ci.yml
scripts/: README_MODERNIZED.md
scripts/predict/: create_test_data.py  predict_blockwise.py  predict_pytorch.py  predict_pytorch_template.json  predict_template.json  test_prediction_config.json
scripts/testing/: performance_benchmarks.py
scripts/train/: gpu_optimizer.py
scripts/train/setup01/: generate_network.py  generate_network_tf2.py  parameter.json  parameter_5090.json  predict.py  train.py
scripts/train/setup02/: generate_network.py  parameter.json  predict.py  train.py
scripts/train/setup03/: generate_network.py  parameter.json  parameter_pytorch.json  predict.py  train.py  train_pytorch.py
scripts/visualization/: advanced_visualizations.py  visualize_snapshot.py
singularity/: Singularity_py2.7.recipe  Singularity_py3.recipe
src/synful/: __init__.py  cli.py  inference.py  models.py  snapshot.py  synapse.py  training.py
src/synful/data/: __init__.py  augmentations.py  mongodb_source.py  pipeline.py  sources.py  transforms.py  tsv_source.py
src/synful/gunpowder/: __init__.py  add_partner_vector_map.py  cloud_volume_source.py  extract_synapses.py  hdf5_points_source.py  intensity_scale_shift_clip.py  upsample.py
src/synful/visualization/: __init__.py
synful/: __init__.py  nms.py
synful/gunpowder/: __init__.py  extract_synapses.py
synful/tests/: test_cuda12_compatibility.py
synful_original/: __init__.py  database.py  detection.py  evaluate_annotations.py  evaluation.py  googlebrainmaps.py  nms.py  synapse.py  synapse_cleftcluster.py  synapse_mapping.py
synful_original/gunpowder/: __init__.py  add_partner_vector_map.py  cloud_volume_source.py  extract_synapses.py  hdf5_points_source.py  intensity_scale_shift_clip.py  upsample.py
tests/: README.md  pytest.ini
tests/examples/: example_snapshot_usage.py  example_training.py
tests/integration/: test_modernized_scripts.py  test_synful_complete.py  test_zarr_mongodb.py
tests/performance/: quick_test_synful.py  simple_test_synful.py
tests/unit/: test_augmentations_fix.py  test_import_fix.py  test_training_fix.py
